[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github_api"
version = "0.0.1"
authors = [
  { name="Ilya Selivanov", email="selivanov.ilya@gmail.com" },
]
description = "A very small demo of a github api usage"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/IlyaSelivanov/py_github_api"
"Bug Tracker" = "https://github.com/IlyaSelivanov/py_github_api/issues"